Fix fab button Firefox

--- a/css/_fab-button.scss
+++ b/css/_fab-button.scss
@@ -5,12 +5,6 @@ $pi: 3.14;
 //config
 $menu-items: 2;
 
-%goo {
-  filter: url('#shadowed-goo');
-  // debug
-  //background:rgba(255,0,0,0.2);
-}
-
 %ball {
   background: $fg;
   border-radius: 100%;
@@ -81,7 +75,7 @@ $hamburger-spacing: 8px;
 }
 
 .menu {
-  @extend %goo;
+  //@extend %goo;
   $width: 120px;
   $height: 80%;
   position: fixed;
